spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,7 @@ p {
 }
 .spacing {
     height:30px;
+    visibility: hidden;
 }
 .imgSocial {
     width: 70px;
